--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.2.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   },
