--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -29,6 +29,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "object-curly-newline":"off",
       "react/jsx-one-expression-per-line": "off",
       "react/jsx-props-no-spreading": "off",
       "no-restricted-globals": "off",
