--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -29,6 +29,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "no-console":"off",
+      "semi":"off",
       "object-curly-newline":"off",
       "react/jsx-one-expression-per-line": "off",
       "react/jsx-props-no-spreading": "off",
@@ -39,7 +41,7 @@
       "prettier/prettier":"off",
       "jsx-a11y/label-has-associated-control":"off",
       "jsx-a11y/label-has-associated-control":"off",
-      "prettier/prettier": "error",
+      "prettier/prettier": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
