--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -29,6 +29,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "no-alert":"off",
       "react/jsx-no-target-blank":"off",
       "@typescript-eslint/explicit-module-boundary-types":"off",
       "camelcase":"off",
